# ocs2

ocs2_core/: CMakeLists.txt  package.xml
ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_oc/: CMakeLists.txt  package.xml
ocs2_oc/include/ocs2_oc/oc_data/: TimeDiscretization.h
ocs2_oc/src/oc_data/: TimeDiscretization.cpp
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot/config/command/: gait.info  reference.info
ocs2_robotic_examples/ocs2_legged_robot/config/mpc/: task.info
ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/common/: ModelSettings.h
ocs2_robotic_examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/gait/: GaitKeyboardPublisher.h  GaitReceiver.h
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
ocs2_robotic_examples/ocs2_legged_robot_ros/launch/: legged_robot_ddp.launch.py  legged_robot_ipm.launch.py  legged_robot_sqp.launch.py
ocs2_robotic_examples/ocs2_legged_robot_ros/rviz/: legged_robot.rviz
ocs2_robotic_examples/ocs2_legged_robot_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotIpmMpcNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/include/ocs2_ros_interfaces/command/: TargetTrajectoriesInteractiveMarker.h  TargetTrajectoriesKeyboardPublisher.h  TargetTrajectoriesRosPublisher.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/common/: RosMsgHelpers.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/mpc/: MPC_ROS_Interface.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/mrt/: MRT_ROS_Interface.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/synchronized_module/: RosReferenceManager.h  SolverObserverRosCallbacks.h
ocs2_ros_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp  TargetTrajectoriesRosPublisher.cpp
ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp
ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_ros_interfaces/src/mrt/: MRT_ROS_Dummy_Loop.cpp  MRT_ROS_Interface.cpp
ocs2_ros_interfaces/src/multiplot/: MultiplotRemap.cpp
ocs2_ros_interfaces/src/synchronized_module/: RosReferenceManager.cpp  SolverObserverRosCallbacks.cpp
ocs2_ros_interfaces/test/: test_custom_callback_queue.cpp
ocs2_sqp/blasfeo_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/hpipm_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/src/: SqpSolver.cpp
ocs2_test_tools/ocs2_qp_solver/: CMakeLists.txt  package.xml
ocs2_thirdparty/: CMakeLists.txt  package.xml
