<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>ocs2_msgs</name>
    <version>0.0.0</version>
    <description>OCS2 message and service definitions.</description>

    <license>TODO</license>
    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>std_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
    <member_of_group>rosidl_interface_packages</member_of_group>

</package>
